# AVAbout

./: .gitmodules  README.md  build.gradle  settings.gradle
AudioRecorderLib/: build.gradle
AudioRecorderLib/src/main/cpp/audiorecord/: audiorecord.h
AudioRecorderLib/src/main/java/com/net168/audiorecord/audiorecord/: AudioRecordCore.java
AudioRecorderLib/src/main/java/com/net168/mediademo/: CodecHelper.java  ExcuteTools.java  MediaExactorDemo.java  MuxerHelper.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/net168/audiorecorddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/net168/audiorecorddemo/: MainActivity.java
app/src/main/java/com/wslivedemo/: LiveActivity.java  LiveUI.java  StatusBarUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/net168/audiorecorddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libWSLive/: build.gradle
